# flexbar

./: CMakeLists.txt  README.TXT
debian/: changelog  control  copyright  files  postinst  prerm  rules
debian/patches/: 0001-Removed-platform-based-library-deps.patch  series
include/seqan/arg_parse/: arg_parse_doc.h  argument_parser.h  tool_doc.h
lib/linux64/: libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
lib/macosx/: libtbb_preview.dylib  libtbb_preview_debug.dylib  libtbbmalloc.dylib  libtbbmalloc_debug.dylib
src/: AdapterLoader.h  AlignmentAlgorithm.h  AlignmentFilter.h  CMakeLists.txt  Enums.h  Flexbar.cpp  Flexbar.h  HashmapFilter.h  LookupFilter.h  MultiplexedAlignmentFilter.h  MultiplexedInputFilter.h  MultiplexedOutputFilter.h  MultiplexedRead.h  OutputFileStruct.h  PairedreadFinder.cpp  SequenceConverter.h  SequenceInputFilter.h  SequenceOutputFilter.h  SequencingRead.h
test/: correct_result_adaptive_left.fastq  flexbar_test_adaptive.sh  flexbar_test_csfasta.sh  flexbar_test_csfastq.sh  flexbar_test_fasta.sh  flexbar_test_fastq.sh  flexbar_validate.sh
